# rusty_chat

./: .dockerignore  .env  .gitignore  Cargo.toml  DATABASE.md  DOCKER_NOTES.md  Dockerfile  DockerfileOLD  NETWORK_NOTES.md  NOTES.md  README.md  chat.db  chat.db-shm  chat.db-wal  notes.md  unused.rs
src/: auth.rs  common.rs  dto.rs  lib.rs  main.rs  oldMain.rs  socket_actor.rs  socket_actor_structs.rs  testMain.rs  watcher.rs
unused/: oldmain.rs
