[package]
name = "chat"
version = "0.1.0"
authors = ["AJTJ <janke.aaron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-web = "3"
actix-web-actors = "3.0.0"
serde_json = "1.0"
sqlx = { version = "0.4.2", features = [ "runtime-actix-rustls", "sqlite", "chrono" ] }
dotenv = "0.15.0"
chrono = "0.4"
# tokio = { version = "1.0", features = ["full"] }