[package]
name = "chat"
version = "0.1.0"
authors = ["AJTJ <janke.aaron@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10"
actix-rt = "2.2.0"
# actix-rt = "1.1"
actix-web = "3"
actix-web-actors = "3.0.0"
actix-identity = "0.3.1"
actix-cors = "0.5.4"
serde_json = "1.0"
rust-argon2 = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.4.2", features = [ "runtime-actix-rustls", "sqlite", "chrono" ] }
dotenv = "0.15.0"
chrono = {version = "0.4", features = ["serde"]}
rand = "0.8.3"
# notify = "4.0.17"
hotwatch = "0.4.5"
actix-files = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4.14"
actix-session = "0.4.1"
base64 = "0.13.0"
cookie = "0.14"
time = "0.2.27"